<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/githubColor_700"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_height="120dp" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextContent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/iv_avatar"
                android:textSize="32sp"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tv_username"
                style="@style/TextContent.Subtitle"
                android:layout_marginBottom="16dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv_name"
                android:text="@string/username" />

            <LinearLayout
                android:id="@+id/detail_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_username"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_location"
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_vertical"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:drawablePadding="2dp"
                    android:layout_weight="1"
                    android:text="@string/location" />

                <TextView
                    android:id="@+id/tv_company"
                    style="@style/TextContent.Subtitle"
                    android:layout_width="match_parent"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="2dp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_baseline_apartment_24"
                    android:text="@string/company" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/stats_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_info"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/repository" />

                <TextView
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/followers" />

                <TextView
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/following" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/stats_title"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_repository"
                    style="@style/TextContent.Subtitle"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_marginBottom="16dp"
                    android:textSize="20sp"
                    android:text="@string/_000" />

                <TextView
                    android:id="@+id/tv_followers"
                    style="@style/TextContent.Subtitle"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_marginBottom="16dp"
                    android:textSize="20sp"
                    android:text="@string/_000" />

                <TextView
                    android:id="@+id/tv_following"
                    style="@style/TextContent.Subtitle"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:layout_marginBottom="16dp"
                    android:textSize="20sp"
                    android:text="@string/_000" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_stats"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_follow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_person_add_24"
                    style="@style/ButtonGeneral"
                    android:layout_weight="1"
                    android:text="@string/follow"
                    android:textSize="12sp"/>

                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_share_24"
                    style="@style/ButtonGeneral"
                    android:layout_weight="1"
                    android:text="@string/share"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_below="@+id/layout_button"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tl_follow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    app:tabTextColor="@android:color/white"/>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vp_follow_page"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/githubButton"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24"/>

</RelativeLayout>